cabal-version:          2.2
name:                   hledger-accountflow
version:                0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:                ISC
license-file:           LICENSE
author:                 Eric Mertens
maintainer:             emertens@gmail.com
copyright:              2021 Eric Mertens
build-type:             Simple

executable hledger-accountflow
  main-is:              Main.hs
  default-language:     Haskell2010
  build-depends:
    base >=4.13 && <4.15,
    containers,
    hledger     ^>= 1.22,
    hledger-lib ^>= 1.22,
    text,
    tabular,
    ansi-terminal,
